@@ -93,7 +93,9 @@ void handle_hpux_client(char *hostname, char *clienttype, enum ostype_t os,
 
 		if (found == 3) {
 			unix_memory_report(hostname, clienttype, os, hinfo, fromline, timestr,
-				   memphystotal, memphysused, -1, memswaptotal, memswapused);
+				   memphystotal, memphysused, 
+				   -1, -1, 
+				   memswaptotal, memswapused);
 		}
 	}
 
