@@ -28,6 +28,8 @@ xymon (4.3.25) stable; urgency=high
      report page (Thanks, Dominique Frise)
    * The xymon.sh and runclient.sh scripts are themselves now more LSB compliant 
      (Thanks, Nikolai Lifanov)
+   * Windows systems now have a better calculation of "Actual" memory usage 
+     (Thanks, John Rothlisberger)
 
  -- Japheth Cleaver <cleaver-xymon@terabithia.org>  XXX, XX Jan 2016 08:00:00 -0800
 
