@@ -25,6 +25,8 @@ Changes from 4.3.24 -> 4.3.25 (XX Jan 2016)
   report page (Thanks, Dominique Frise)
 * The xymon.sh and runclient.sh scripts are themselves now more LSB compliant 
   (Thanks, Nikolai Lifanov)
+* Windows systems now have a better calculation of "Actual" memory usage    
+  (Thanks, John Rothlisberger)
 
 
 Changes from 4.3.23 -> 4.3.24 (23 Nov 2015)
